Fixed:  Filer.net, MajorGeeks.com, UsersCloud.com                 New Plugin:  VidGg.to